GNOME Bugzilla – Bug 725245
Problem with about:epiphany background color
Last modified: 2014-02-27 14:28:04 UTC
A new CSS rule has been introduced on the 'html' tag for the about pages, that is overriding the background-color property that the about:epiphany page was using for all its body, creating a sharp square area around the ephytext. The background color for all the page should be again the same one.
Created attachment 270404 [details] [review] Override the default background color on about:epiphany
Created attachment 270405 [details] Screenshot of about:epiphany on master
Comment on attachment 270404 [details] [review] Override the default background color on about:epiphany Thanks!