Override the default background color on about:epiphany

Use the original background color on about:epiphany
to fill all the page background.

https://bugzilla.gnome.org/show_bug.cgi?id=725245